| Summary: | ASTERISK-30164: chan_iax2: Add missing option documentation | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-07-30 16:09:52 | Date Closed: | 2022-08-10 08:26:35 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_iax2 |
| Versions: | 18.13.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Adds missing option documentation. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-07-30 16:09:57.057-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-08-10 08:26:37.772-0500 Change 18932 merged by Friendly Automation: chan_iax2: Add missing options documentation. [https://gerrit.asterisk.org/c/asterisk/+/18932|https://gerrit.asterisk.org/c/asterisk/+/18932] By: Friendly Automation (friendly-automation) 2022-08-10 08:36:28.241-0500 Change 18934 merged by Friendly Automation: chan_iax2: Add missing options documentation. [https://gerrit.asterisk.org/c/asterisk/+/18934|https://gerrit.asterisk.org/c/asterisk/+/18934] By: Friendly Automation (friendly-automation) 2022-08-10 08:39:34.626-0500 Change 18886 merged by Benjamin Keith Ford: chan_iax2: Add missing options documentation. [https://gerrit.asterisk.org/c/asterisk/+/18886|https://gerrit.asterisk.org/c/asterisk/+/18886] By: Friendly Automation (friendly-automation) 2022-08-10 08:39:47.261-0500 Change 18931 merged by Benjamin Keith Ford: chan_iax2: Add missing options documentation. [https://gerrit.asterisk.org/c/asterisk/+/18931|https://gerrit.asterisk.org/c/asterisk/+/18931] By: Friendly Automation (friendly-automation) 2022-08-10 08:39:57.611-0500 Change 18933 merged by Benjamin Keith Ford: chan_iax2: Add missing options documentation. [https://gerrit.asterisk.org/c/asterisk/+/18933|https://gerrit.asterisk.org/c/asterisk/+/18933] | ||